# CQF_Python_Primer

./: .gitignore  Fitch  Markdown 2024.ipynb  Fitch 2024 Part 2.ipynb  Part 1.ipynb  exersise.ipynb  my_2024_01_13.ipynb  pyproject.toml
