[tool.poetry]
name = "cqf-python-primer"
version = "0.1.0"
description = "CQF Python Primer Januar 2024"
authors = ["CQF"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "~1.24"
scipy = "~1.10.0"
matplotlib = "~3.6"
pandas = "2.0"



[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
