[tool.poetry]
name = "cqf-python-primer"
version = "0.1.0"
description = "CQF Python Primer Januar 2024"
authors = ["CQF"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.3"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
nltk = "^3.8.1"
sympy = "^1.12"
jupyter = "^1.0.0"
jupyterlab = "^4.0.10"




[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
